--- a/Projeto/public/css/style.css
+++ b/Projeto/public/css/style.css
@@ -1,12 +1,33 @@
 .img{
     width: 100%;
-    border-radius: 50px;
+    border-radius: 30px;
+    align-items: center;
 }
 
 .card {
     margin-top: 65px;
+    text-align: center;
 }
 
 #text {
     margin-top: 15px;
+    color: midnightblue;
+    font-weight: bold;
+    font-size: 25px;
+    text-align: center;
+}
+
+#cidade {
+    font-weight: bold;
+    color: black;
+    font-size: 16px;
+}
+
+#descricao {
+    color: black;
+}
+
+#valor {
+    font-weight: bold;
+    color: red;
 }
